adicionando animação de scroll e scroll suave, orgamizando a retrabalhando responsividade.

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
       <p class="font-os-r-1 cor-t">Meu nome é <strong class="span">Bruno Conceição dos Santos</strong>, desenvolvo programacão de Front End com HTML, CSS, JavaScript </p>
       <div class="links-extremos">
         <ul>
-          <li><a href="#" class="btn">
+          <li><a href="" class="btn">
               <span class="bi bi-github"></span>
               <span>git hub</span></a></li>
-          <li><a href="#" class="btn">
+          <li><a href="" class="btn">
               <span class="bi bi-linkedin"></span>
               <span>linkedin</span></a></li>
         </ul>
@@ -47,7 +47,7 @@
     </div>
   </header>
 
-  <article id="about-me" class="section " aria-labelledby="about">
+  <article id="about-me" class="section" aria-labelledby="about" data-scroll="section">
     <h2 class="Subtitulo" id="about">Sobre mim</h2>
     <section class="about__me-container container ">
       <div class="about__me-box">
@@ -64,7 +64,7 @@
     </section>
   </article>
 
-  <article id="studies" class="section my-studies" aria-labelledby=" my-studies">
+  <article id="studies" class="section my-studies" aria-labelledby=" my-studies" data-scroll="section">
     <h2 id=" my-studies" class="Subtitulo">Meus estudos</h2>
     <div class="studies-container container ">
       <section class="studies-boxs">
@@ -111,7 +111,7 @@
     </div>
   </article>
 
-  <article id="project" class="section" aria-labelledby="contact">
+  <article id="project" class="section" aria-labelledby="contact" data-scroll="section">
     <h2 class="Subtitulo">meu projetos</h2>
     <section class="project-conatiner container">
       <div class="project-box">
@@ -125,8 +125,8 @@
 
             <div class="project-links">
               <ul>
-                <li><a href="#" class="btn">Abrir projeto</a></li>
-                <li><a href="#" class="btn">Repositório</a></li>
+                <li><a href="" class="btn">Abrir projeto</a></li>
+                <li><a href="" class="btn">Repositório</a></li>
               </ul>
             </div>
           </div>
@@ -140,8 +140,8 @@
             <p class="font-int-r-1  cor-t">Este projeto fiz somente usando HTML e CSS, deixando otimizado e responsivo, utilizando algumas técnicas de UI Design</p>
             <div class="project-links">
               <ul>
-                <li><a href="#" class="btn">Abrir projeto</a></li>
-                <li><a href="#" class="btn">Repositório</a></li>
+                <li><a href="" class="btn">Abrir projeto</a></li>
+                <li><a href="" class="btn">Repositório</a></li>
               </ul>
             </div>
           </div>
@@ -150,7 +150,7 @@
     </section>
   </article>
 
-  <form action="" id="contact" class="form section">
+  <form action="" id="contact" class="form section" data-scroll="section">
     <h2 class="Subtitulo">contato</h2>
     <div class="container">
       <p class="font-int-r-1  cor-t">Se você deseja entrar em contato, por favor, preencha o formulário abaixo. Farei o possível para responder o mais rápido possível. Estou ansioso para conversar com você em breve!</p>
