--- a/index.html
+++ b/index.html
@@ -17,19 +17,21 @@
 <body>
   <header id="header">
     <main class="header-content" data-scrolling>
-      <div class="header-img">
-        <img src="./img/icons/Bruno-Marca.svg" alt="Logotipo" width="176" height="57">
+      <div class="header-menu">
+        <div class="header-img">
+          <img src="./img/icons/Bruno-Marca.svg" alt="Logotipo" width="176" height="57">
+        </div>
+        <nav aria-label="Primário" class="navegacao">
+          <button data-button="menu" aria-controls="menu" aria-expanded="false">Menu</button>
+          <ul class="font-int-g-1" data-button="lista" id="menu">
+            <li><a href="#header">home</a></li>
+            <li><a href="#about-me">sobre mim</a></li>
+            <li><a href="#studies">meus estudos</a></li>
+            <li><a href="#project">projeto</a></li>
+            <li><a href="#contact">contato</a></li>
+          </ul>
+        </nav>
       </div>
-      <nav aria-label="Primário" class="navegacao">
-        <button data-button="menu" aria-controls="menu" aria-expanded="false">Menu</button>
-        <ul class="font-int-g-1" data-button="lista" id="menu">
-          <li><a href="#header">home</a></li>
-          <li><a href="#about-me">sobre mim</a></li>
-          <li><a href="#studies">meus estudos</a></li>
-          <li><a href="#project">projeto</a></li>
-          <li><a href="#contact">contato</a></li>
-        </ul>
-      </nav>
     </main>
     <div class="introduction-content container">
       <h1 class="font-pop-g-4 ">Futuro desenvolvedor de<br> <span class="liner">Front End</span></h1>
@@ -55,8 +57,14 @@
         <p class="font-os-r-1">Optei por me dedicar ao Front End devido à sua vasta comunidade, potencial de crescimento e à incrível possibilidade de reutilizar conhecimentos na web. Estou empolgado em explorar as oportunidades que essa área oferece e em me aprimorar constantemente.</p>
       </div>
       <div class="img-foto">
-        <img src="./img/fotos/foto-perfil.png" alt="Bruno" width="473" height="843">
+        <picture>
+          <source srcset="./img/fotos/foto-perfil-2.jpeg" media="(max-width: 850px)">
+          <img src="./img/fotos/foto-perfil-1.png" alt="Bruno" width="473" height="843">
+
+
+        </picture>
       </div>
+
   </article>
 
   <article id="studies" class="section my-studies" aria-labelledby=" my-studies" data-scroll="section">
