--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <img src="./img/icons/javascript.png" width="512" height="512" alt="javascript">
           </div>
           <div>
-            <p class="font-int-r-1">Possuo habilidades intermediárias em manipulação do DOM em JavaScript, permitindo interações dinâmicas e atualizações em páginas web. Tenho conhecimento em utilizar a API Fetch para consumir dados de serviços web. Automação em front end uso do Git e GitHub para controle de versão de código, utilizando ferramentas como linha de comando NPM para gerenciar dependências e scripts de automação. </p>
+            <p class="font-int-r-1">Possuo habilidades intermediárias em manipulação do DOM em <strong class="span">JavaScript</strong>, permitindo interações dinâmicas e atualizações em páginas web. Tenho conhecimento em utilizar a API Fetch para consumir dados de serviços web. Automação em front end uso do Git e GitHub para controle de versão de código, utilizando ferramentas como linha de comando NPM para gerenciar dependências e scripts de automação. </p>
           </div>
         </div>
 
